2007-01-04  Daniel Jacobowitz  <dan@codesourcery.com>

	* CONTRIBUTE: Use sourceware.org.

2007-01-04  Daniel Jacobowitz  <dan@codesourcery.com>

	* buildsym.c (start_subfile): Handle producer.
	(record_producer): New function.
	* buildsym.h (struct subfile): Include producer.
	(record_producer): New prototype.
	* dwarf2-frame.c (struct dwarf2_cie): Add version and augmentation.
	(struct dwarf2_frame_state): Add armcc_cfa_offsets_sf and
	armcc_cfa_offsets_reversed.
	(execute_cfa_program): Handle armcc_cfa_offsets_sf.
	(dwarf2_frame_find_quirks): New function.
	(dwarf2_frame_cache): Call it.  Handle armcc_cfa_offsets_reversed.
	(decode_frame_entry_1): Record the CIE version.  Record the
	augmentation.  Skip armcc augmentations.
	* dwarf2read.c (read_file_scope): Save the producer.
	* symtab.h (struct symtab): Rename unused version member to
	producer.

2007-01-04  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.ac (build_warnings): Use -Wall and
	-Wdeclaration-after-statement.
	* configure: Regenerated.

2007-01-04  Vladimir Prus  <vladimir@codesourcery.com>

	Simplify access to variours properties of child
	variable objects in C.
	* varobj.c (value_struct_element_index): New function.
	(c_describe_child): New function.
	(c_name_of_child, c_value_of_child)
	(c_type_of_child): Rewrite to use c_describe_child.

2007-01-04  Vladimir Prus  <vladimir@codesourcery.com>

	gdb/
	* varobj.c: Include "vec.h". 
	(varobj_p): New typedef, declare vector of those.
	(struct varobj): Use vector for the 'children' member.
	(child_exists): Remove.
	(save_child_in_parent): Remove.
	(remove_child_from_parent): Remove.
	(struct varobj_child): Remove.
	(struct vstack): Remove.
	(vpush, vpop): Remove.
	(varobj_list_children): Adjust to work work vector.
	(varobj_update): Likewise. Use vectors for
	working stack and result.
	(delete_variable_1): Likewise.
	* Makefile.in (varobj.o): Update dependencies.

2007-01-04  Vladimir Prus  <vladimir@codesourcery.com>
